# Laplace-Inducing-Points

./: .gitignore  Makefile  laplace-vis.py  main.py  main_mnist.py  main_scalable.py  main_toy.py  pyproject.toml  readme.md  requirements-old.txt  requirements.txt  toymain.py  vis-exp-cifar.py  vis-exp-data.py  vis-kl.py  vis-laplace.py  vis-xor.py
config/: optimization.yml  optimization_mnist.yml  optimization_toyclassifier.yml  optimization_toyclassifier_banana.yml  optimization_toyclassifier_spiral.yml  optimization_toyclassifier_xor.yml  optimization_toyclassifier_xor_tiny.yml  optimization_toyregressor.yml  optimization_toyregressor_sine.yml  toyclassifier.yml  toyclassifier_banana.yml  toyclassifier_spiral.yml  toyclassifier_xor.yml  toyclassifier_xor_tiny.yml  toyregressor.yml
config/scale/: lenet5-2_fmnist.yml  lenet5-2_mnist.yml  lenet5_fmnist.yml  lenet5_mnist.yml  mlp_fmnist.yml  mlp_mnist.yml  resnet1-2_cifar10.yml  resnet1_cifar10.yml  resnet1_fmnist.yml
config/tests/: toyclassifier.yml
config/toy/: optimization_toyclassifier_banana.yml  optimization_toyclassifier_spiral.yml  (+6 more)
data/: sine.npz  xor.npz
scale_experiments/: evaluate.py  train.py
src/: Untitled-1.md  data.py  ggn.py  grid_search.py  lla.py  main.py  matfree_monkeypatch.py  mnist.py  nplot.py  sample.py  scaledata.py  scalemodels.py  stochtrace.py  toydata.py  toymodels.py  train_alpha.py  train_inducing.py  train_map.py  utils.py
tests/: fixtures.py  test_ggn.py  test_lla.py  test_numlinalg.py  test_probs.py  test_sample.py  test_stochtrace.py  test_variational.py
